--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon Task4/index.js"
+    "start": "nodemon Task6/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@sequelize/postgres": "^7.0.0-alpha.45",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "commander": "^13.1.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
